--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
 
     <div class="container flex flex-row justify-center bg-blue-300">
      
-      <form action="action_page.php">
+      <form action="">
         <br>
         
         <div class="row">
